# ai-pa

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
data/documents/emails/: email_1.txt
data/documents/notes/: meeting_notes_project_y.txt
data/documents/other/: misc_info.txt
src/personal_assistant/: cli.py  main.py
src/personal_assistant/api/v1/: api.py
src/personal_assistant/api/v1/endpoints/: auth.py  conversation.py  integrations.py  rag.py
src/personal_assistant/core/: config.py  conversation.py  llm.py  security.py  vector_store.py
src/personal_assistant/crud/: crud_conversation.py
src/personal_assistant/db/: base.py  init_db.py  session.py
src/personal_assistant/integrations/: base.py  email.py
src/personal_assistant/models/: database.py  document.py
